--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -39,7 +39,7 @@
                 {% endif %}
             </div>
             <div class="col-12">
-              {{ form.submit(class="btn btn-outline-primary") }}
+              {{ form.submit(class="btn btn-outline-primary custom-primary-btn") }}
             </div>
           </form>
 
