--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -17,36 +17,36 @@
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
           <div class="col-md-3 mb-2 mb-md-0">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{{ url_for('home')}}">
                 <img src="{{ url_for('static', filename='images/footprint-black.png')}}" alt="" width="60" height="48">
               </a>
               <span><p>Green Naija SME</p></span>
-            <!-- <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-              <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-            </a> -->
           </div>
     
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="{{ url_for('home')}}" class="nav-link px-2 ">Home</a></li>
             <li><a href="{{ url_for('calculate')}}" class="nav-link px-2">Calculate</a></li>
-            <!-- <li><a href="#" class="nav-link px-2">Pricing</a></li> -->
-            <!-- <li><a href="#" class="nav-link px-2">FAQs</a></li> -->
             <li><a href="{{ url_for('about')}}" class="nav-link px-2">About Us</a></li>
           </ul>
     
           <div class="col-md-3 text-end">
             {% if current_user.is_authenticated %}
-              <button type="button" class="btn btn-outline-primary">
-                <a href="{{ url_for('account')}}" class="nav-link px-2"> Account </a></button>
-              <button type="button" class="btn btn-outline-primary">
-                <a href="{{ url_for('logout')}}" class="nav-link px-2"> Logout </a></button>
+                <button type="button" class="btn custom-primary-btn">
+                    <a href="{{ url_for('account')}}"> Account </a>
+                </button>
+                <button type="button" class="btn custom-primary-btn">
+                    <a href="{{ url_for('logout')}}"> Logout </a>
+                </button>
             {% else %}
-              <button type="button" class="btn btn-outline-primary">
-                  <a href="{{ url_for('login')}}" class="nav-link px-2"> Login </a></button>
-              <button type="button" class="btn btn-outline-primary me-2">
-                  <a href="{{ url_for('register')}}" class="nav-link px-2"> Sign-up </a></button>
+                <button type="button" class="btn custom-primary-btn">
+                    <a href="{{ url_for('login')}}"> Login </a>
+                </button>
+                <button type="button" class="btn custom-primary-btn me-2">
+                    <a href="{{ url_for('register')}}"> Sign-up </a>
+                </button>
             {% endif %}
-          </div>
+        </div>
+        
         </header>
       </div>
 
@@ -70,8 +70,6 @@
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="{{ url_for('home')}}" class="nav-link px-2 text-body-secondary">Home</a></li>
             <li class="nav-item"><a href="{{ url_for('calculate')}}" class="nav-link px-2 text-body-secondary">Calculate</a></li>
-            <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li> -->
-            <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li> -->
             <li class="nav-item"><a href="{{ url_for('about')}}" class="nav-link px-2 text-body-secondary">About Us</a></li>
           </ul>
           <p class="text-center text-body-secondary">&copy; 2024 Green Naija SME, Inc</p>
