--- a/flaskr/templates/calculate.html
+++ b/flaskr/templates/calculate.html
@@ -1,18 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <style>
-    /* Custom CSS to style the form */
-    .form-group {
-      margin-bottom: 20px;
-      
-    }
-    label{margin-left: 20px;} 
-		#datepicker1{width:180px;} 
-    #datepicker2{width:180px}
-		#datepicker1 > span:hover{cursor: pointer;}
-  </style>
-</head>
-<body>
+
   <h1 class="container"> Hi {{ current_user.username }} 👋🏿</h1>
   <br>
   <h2>Reporting Period </h2>
@@ -22,14 +10,14 @@
       <div id="datepicker1" class="input-group date" data-date-format="mm-dd-yyyy"> 
         <input class="form-control" type="text" readonly /> 
         <span class="input-group-addon">  
-          <i class="bi-calendar-event-fill" style="font-size: 2rem; color: cornflowerblue;"></i>
+          <i class="bi-calendar-event-fill" style="font-size: 2rem; color: green;"></i>
         </span>
       </div> 
       <label>To: </label>
       <div id="datepicker2" class="input-group date" data-date-format="mm-dd-yyyy"> 
         <input class="form-control" type="text" readonly /> 
         <span class="input-group-addon"> 
-          <i class="bi-calendar-event-fill" style="font-size: 2rem; color: cornflowerblue;"></i> 
+          <i class="bi-calendar-event-fill" style="font-size: 2rem; color: green;"></i> 
         </span>
       </div>
   </div>
@@ -164,9 +152,7 @@
         </div>
       </div>
 
-      <!-- this is the end -->
-
-      <button type="submit" class="btn btn-primary" onclick="submitForm(event)">Calculate</button>
+      <button type="submit" class="btn custom-primary-btn" onclick="submitForm(event)">Calculate</button>
     </form>
   </div>
 
