--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -36,18 +36,18 @@
         </div>
     </fieldset>
     <div class="col-12">
-      {{ form.submit(class="btn btn-outline-primary") }}
+      {{ form.submit(class="btn custom-primary-btn") }}
     </div>
     <div>
         <small class="text-muted ml-2">
-            <a href="{{ url_for('reset_request') }}"> Forgot Password? </a>
+            <a href="{{ url_for('reset_request') }}" class="nav-link px-2"> Forgot Password? </a>
         </small>
     </div>
   </form>
   <br>
   <div class="border-bottom">
     <small class="text-muted">
-        Need an account? <a class="ml-2" href="{{ url_for('register') }}"> Sign Up </a>
+        Need an account? <a href="{{ url_for('register') }}" class="nav-link px-2 ml-2"> Sign Up </a>
     </small>
 </div>
 {% endblock content %}
