--- a/flaskr/templates/reset_request.html
+++ b/flaskr/templates/reset_request.html
@@ -19,7 +19,7 @@
         </div>
     </fieldset>
     <div class="col-12">
-      {{ form.submit(class="btn btn-outline-primary") }}
+      {{ form.submit(class="btn custom-primary-btn") }}
     </div>
   </form>
   <br>
