--- a/flaskr/templates/result.html
+++ b/flaskr/templates/result.html
@@ -18,7 +18,7 @@
       </div> -->
 
       <div class="container">
-        <h1>Total Footprint = {{ total_emission }} metric tons of CO2e </h1>
+        <h1>Total Footprint = {{ total_emission }} tons of CO2e </h1>
         <p>Total amount spent is {{ total_price }}</p>
     
 
