add energy & transport chart

--- a/flaskr/templates/calculate.html
+++ b/flaskr/templates/calculate.html
@@ -28,7 +28,7 @@
       <div class="form-group row" id="motorVehicle">    
         <div class="col">   
           <label for="car_diesel">Motor Vehicle (litres)</label>
-          <input type="text" class="form-control" id="motorVehicle_litres" name="motor_vehicle" >
+          <input type="text" class="form-control" id="motorVehicle_litres" name="motor_vehicle" placeholder="Litres" required step="any">
         </div>
         <div class="col">
           <label for="fuelType">Select Fuel Type:</label>
