--- a/flaskr/templates/result.html
+++ b/flaskr/templates/result.html
@@ -11,15 +11,23 @@
         <canvas id="myPieChart"></canvas>
       </div>
     
-      <!-- TODO 1-->
-      <!-- <div style="max-width: 600px; margin: auto;" class="container">
-        <h1 class="text-center">Consumption Pie Chart</h1>
+    
+      <div style="max-width: 600px; margin: auto;" class="container">
+        <h1 class="text-center">Energy and Transportation Pie Chart</h1>
         <canvas id="myPieChart2"></canvas>
-      </div> -->
+      </div>
+      <br>
 
       <div class="container">
-        <h1>Total Footprint = {{ total_emission }} tons of CO2e </h1>
-        <p>Total amount spent is {{ total_price }}</p>
+        <h1><strong> Your Carbon Footprint Summary </strong></h1>
+        <p>The total carbon footprint for your business between (insert From date) to (insert To date) is <strong> {{ total_emission }} Tonnes of Co2e </strong> </p>
+        <br>
+        {% if energy_percent > transport_percent %}
+        <p>With your Energy activity representing {{ energy_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+        {% else %}
+        <p>With your Transport activity representing {{ transport_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+        {% endif %}
+        
     
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> 
@@ -98,39 +106,39 @@
             });
         });
 
-    // TODO 2
-    //     document.addEventListener('DOMContentLoaded', function () {
-    //   const coeff_data = JSON.parse('{{ sum_of_coefficient | safe }}');
+         document.addEventListener('DOMContentLoaded', function () {
+        const transport = JSON.parse('{{ transport_percent | safe }}');
+        const energy = JSON.parse('{{ energy_percent | safe }}');
 
     //   // Create pie chart
-    //   const ctx = document.getElementById('myPieChart2').getContext('2d');
-    //   const myChart = new Chart(ctx, {
-    //     type: 'pie',
-    //     data: {
-    //       labels: ["Transportation", "Energy"],
-    //       datasets: [{
-    //         label: 'Test Consumption',
-    //         data: coeff_data,
-    //         backgroundColor: [
-    //           'rgba(255, 99, 132, 0.5)', // Red color with transparency
-    //           'rgba(54, 162, 235, 0.5)', // Blue color with transparency
-    //         ],
-    //         borderColor: [
-    //           'rgba(255, 99, 132, 1)',
-    //           'rgba(54, 162, 235, 1)'
-    //         ],
-    //         borderWidth: 1
-    //       }]
-    //     },
-    //     options: {
-    //       scales: {
-    //         y: {
-    //           beginAtZero: true
-    //         }
-    //       }
-    //     }
-    //   });
-    // });
+        const ctx = document.getElementById('myPieChart2').getContext('2d');
+        const myChart = new Chart(ctx, {
+            type: 'pie',
+            data: {
+            labels: ["Transportation", "Energy"],
+            datasets: [{
+               label: 'Test Consumption',
+               data: [transport, energy],
+               backgroundColor: [
+                 'rgba(255, 99, 132, 0.5)', // Red color with transparency
+                 'rgba(54, 162, 235, 0.5)', // Blue color with transparency
+               ],
+               borderColor: [
+                 'rgba(255, 99, 132, 1)',
+                 'rgba(54, 162, 235, 1)'
+               ],
+               borderWidth: 1
+             }]
+           },
+           options: {
+             scales: {
+               y: {
+                 beginAtZero: true
+               }
+             }
+           }
+         });
+       });
 
     </script>
 
