--- a/flaskr/templates/result.html
+++ b/flaskr/templates/result.html
@@ -30,7 +30,7 @@
         {% else %}
         <p>With your Transport activity representing {{ transport_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
         {% endif %}
-        
+        <button type="submit" class="btn custom-primary-btn">Strategies</button>
     
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> 
