--- a/flaskr/templates/result.html
+++ b/flaskr/templates/result.html
@@ -13,24 +13,34 @@
         </div>
     </div>
 </div>
-    
-    
-      <div style="max-width: 600px; margin: auto;" class="container">
-        <h1 class="text-center">Energy and Transportation Pie Chart</h1>
-        <canvas id="myPieChart2"></canvas>
-      </div>
-      <br>
+<br>
+<br>
+<br>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div style="max-width: 600px; margin: auto;" class="container">
+                    <h1 class="text-center">Energy and Transportation Pie Chart</h1>
+                    <canvas id="myPieChart2"></canvas>
+                  </div>
+            </div>
+            <div class="col-md-6">
+                <h1><strong> Your Carbon Footprint Summary </strong></h1>
+                    <p>The total carbon footprint for your business between (insert From date) to (insert To date) is <strong> {{ total_emission }} Tonnes of Co2e </strong> </p>
+                <br>
+                    {% if energy_percent > transport_percent %}
+                    <p>With your Energy activity representing {{ energy_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+                    {% else %}
+                    <p>With your Transport activity representing {{ transport_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+                    {% endif %}
+                <a href="{{ url_for('strategies')}}" type="button" class="btn custom-primary-btn">Strategies </a>
+            </div>
 
-      <div class="container">
-        <h1><strong> Your Carbon Footprint Summary </strong></h1>
-        <p>The total carbon footprint for your business between (insert From date) to (insert To date) is <strong> {{ total_emission }} Tonnes of Co2e </strong> </p>
-        <br>
-        {% if energy_percent > transport_percent %}
-        <p>With your Energy activity representing {{ energy_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
-        {% else %}
-        <p>With your Transport activity representing {{ transport_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
-        {% endif %}
-        <button type="submit" class="btn custom-primary-btn">Strategies</button>
+        </div>
+    </div>
+      
+
+
     
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> 
