update form placeholder

--- a/flaskr/templates/calculate.html
+++ b/flaskr/templates/calculate.html
@@ -27,8 +27,8 @@
     <form> 
       <div class="form-group row" id="motorVehicle">    
         <div class="col">   
-          <label for="car_diesel">Motor Vehicle (litres)</label>
-          <input type="text" class="form-control" id="motorVehicle_litres" name="motor_vehicle" placeholder="Litres" required step="any">
+          <label for="car_diesel">Motor Vehicle</label>
+          <input type="text" class="form-control" id="motorVehicle_litres" name="motor_vehicle" placeholder="Litres">
         </div>
         <div class="col">
           <label for="fuelType">Select Fuel Type:</label>
@@ -45,8 +45,8 @@
       <button type="button" onclick="addInput('motorVehicle')">Add More Motor Vehicles</button>
       <div class="form-group row" id="motorbike">
         <div class="col">
-          <label for="motorbike">Motorbike (litres)</label>
-          <input type="text" class="form-control" id="motorbike_litres" name="motorbike">
+          <label for="motorbike">Motorbike</label>
+          <input type="text" class="form-control" id="motorbike_litres" name="motorbike" placeholder="Litres">
         </div>
         <div class="col">
           <label for="fuelType">Select Fuel Type:</label>
@@ -63,8 +63,8 @@
       <button type="button" onclick="addInput('motorbike')">Add More Motorbikes</button>
       <div class="form-group row" id="tricycle">
         <div class="col">
-          <label for="tricycle">Tricycle (litres)</label>
-          <input type="text" class="form-control" id="tricycle_litres" name="tricycle">
+          <label for="tricycle">Tricycle</label>
+          <input type="text" class="form-control" id="tricycle_litres" name="tricycle" placeholder="Litres">
         </div>
         <div class="col">
           <label for="fuelType">Select Fuel Type:</label>
@@ -81,8 +81,8 @@
       <button type="button" onclick="addInput('tricycle')">Add More Tricycle</button>
       <div class="form-group row" id="flightDomestic">
         <div class="col">
-          <label for="flight_domestic">Flight (Domestic) (Km Travelled)</label>
-          <input type="text" class="form-control" id="flightDomestic_value" name="flight_domestic">
+          <label for="flight_domestic">Flight (Domestic)</label>
+          <input type="text" class="form-control" id="flightDomestic_value" name="flight_domestic" placeholder="(Km Travelled)">
         </div>
         <div class="col">
           <label for="flight_domestic_price">Total Cost (Naira)</label>
@@ -91,8 +91,8 @@
       </div>
       <div class="form-group row" id="flightInternational">
         <div class="col">
-          <label for="flight_international">Flight (International) (Km Travelled)</label>
-          <input type="text" class="form-control" id="flightInternational_value" name="flight_international">
+          <label for="flight_international">Flight (International)</label>
+          <input type="text" class="form-control" id="flightInternational_value" name="flight_international" placeholder="(Km Travelled)">
         </div>
         <div class="col">
           <label for="flight_international_price">Total Cost (Naira)</label>
@@ -105,8 +105,8 @@
       <h2 class="text-center">Enerygy Consumption form </h2>
       <div class="form-group row" id="electricity">
         <div class="col">
-          <label for="electricity">Electricity (kWh)</label>
-          <input type="text" class="form-control" id="electricity_value" name="electricity">
+          <label for="electricity">Electricity</label>
+          <input type="text" class="form-control" id="electricity_value" name="electricity" placeholder="kWh">
         </div>
         <div class="col">
           <label for="electricity_price">Total Cost (Naira)</label>
@@ -115,8 +115,8 @@
       </div>
       <div class="form-group row" id="generator">
         <div class="col">
-          <label for="generator">Generator (litres)</label>
-          <input type="text" class="form-control" id="generator_litres" name="generator">
+          <label for="generator">Generator</label>
+          <input type="text" class="form-control" id="generator_litres" name="generator" placeholder="Litres">
         </div>
         <div class="col">
           <label for="fuelType">Select Fuel Type:</label>
@@ -143,8 +143,8 @@
       </div>
       <div class="form-group row" id="firewood">
         <div class="col">
-          <label for="coal">Coal (firewood) (tonnes)</label>
-          <input type="text" class="form-control" id="firewood_value" name="coal">
+          <label for="coal">Coal (firewood)</label>
+          <input type="text" class="form-control" id="firewood_value" name="coal" placeholder="Tonnes">
         </div>
         <div class="col">
           <label for="coal_price">Total Cost (Naira)</label>
