--- a/flaskr/templates/strategies.html
+++ b/flaskr/templates/strategies.html
@@ -9,12 +9,12 @@
     <p><strong> Adopt Solar Energy </strong> - Invest in solar panels to reduce dependence on grid electricity and generators. Solar energy is becoming increasingly viable in Nigeria due to abundant sunlight and government support for renewable energy initiatives.</p>
     <p><strong> Hybrid Generators </strong> - Transition from traditional diesel generators to hybrid solar-diesel generators, which reduce diesel consumption by integrating solar power.</p> 
 
-    <h2> Transportation Optimization </h2>
+    <h2> Transportation Optimisation </h2>
 
-    <p><strong> Optimise Route Planning </strong> - Utilize route optimization software to minimize fuel usage in deliveries and logistics. This can be particularly effective in urban areas where traffic congestion is common. </p> 
+    <p><strong> Optimise Route Planning </strong> - Utilize route optimisation software to minimize fuel usage in deliveries and logistics. This can be particularly effective in urban areas where traffic congestion is common. </p> 
     <p><strong> Adopt Electric Bikes and Tricycles  </strong> - Consider switching to electric versions which are becoming more available.</p>
     <p><strong> Shift to Cleaner Vehicles </strong> - Transition to using electric or hybrid vehicles and motorbikes for company operations. Explore partnerships with electric vehicle providers in Nigeria for potential discounts or pilot programs.</p> 
-    <p><strong> Alternative Fuel Use </strong> - ransition to alternative fuels like biofuel or compressed natural gas (CNG) for company vehicles and onsite machinery to lower direct emissions from conventional fuel sources.</p> 
+    <p><strong> Alternative Fuel Use </strong> - Transition to alternative fuels like biofuel or compressed natural gas (CNG) for company vehicles and onsite machinery to lower direct emissions from conventional fuel sources.</p> 
     <p><strong> Preventive Maintenance </strong> - Regular maintenance of all vehicles</p> 
 
     <h2> Sustainable Resource Use </h2>
