--- a/flaskr/templates/strategies.html
+++ b/flaskr/templates/strategies.html
@@ -11,7 +11,7 @@
 
     <h2> Transportation Optimisation </h2>
 
-    <p><strong> Optimise Route Planning </strong> - Utilize route optimisation software to minimize fuel usage in deliveries and logistics. This can be particularly effective in urban areas where traffic congestion is common. </p> 
+    <p><strong> Optimise Route Planning </strong> - Utilise route optimisation software to minimize fuel usage in deliveries and logistics. This can be particularly effective in urban areas where traffic congestion is common. </p> 
     <p><strong> Adopt Electric Bikes and Tricycles  </strong> - Consider switching to electric versions which are becoming more available.</p>
     <p><strong> Shift to Cleaner Vehicles </strong> - Transition to using electric or hybrid vehicles and motorbikes for company operations. Explore partnerships with electric vehicle providers in Nigeria for potential discounts or pilot programs.</p> 
     <p><strong> Alternative Fuel Use </strong> - Transition to alternative fuels like biofuel or compressed natural gas (CNG) for company vehicles and onsite machinery to lower direct emissions from conventional fuel sources.</p> 
