--- a/flaskr/templates/result.html
+++ b/flaskr/templates/result.html
@@ -33,7 +33,7 @@
                     {% else %}
                     <p>With your Transport activity representing {{ transport_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
                     {% endif %}
-                <a href="{{ url_for('strategies')}}" type="button" class="btn custom-primary-btn">Strategies </a>
+                <a href="{{ url_for('strategies')}}" type="button" class="btn custom-primary-btn">Strategies for Reducing Your Carbon Footprint </a>
             </div>
 
         </div>
