--- a/flaskr/templates/strategies.html
+++ b/flaskr/templates/strategies.html
@@ -14,7 +14,7 @@
     <p><strong> Optimise Route Planning </strong> - Utilize route optimization software to minimize fuel usage in deliveries and logistics. This can be particularly effective in urban areas where traffic congestion is common. </p> 
     <p><strong> Adopt Electric Bikes and Tricycles  </strong> - Consider switching to electric versions which are becoming more available.</p>
     <p><strong> Shift to Cleaner Vehicles </strong> - Transition to using electric or hybrid vehicles and motorbikes for company operations. Explore partnerships with electric vehicle providers in Nigeria for potential discounts or pilot programs.</p> 
-    <p><strong> Alternative Fuel Use </strong> - ransition to alternative fuels like biofuel or compressed natural gas (CNG) for company vehicles and onsite machinery to lower direct emissions from conventional fuel sources.</p> 
+    <p><strong> Alternative Fuel Use </strong> - Transition to alternative fuels like biofuel or compressed natural gas (CNG) for company vehicles and onsite machinery to lower direct emissions from conventional fuel sources.</p> 
     <p><strong> Preventive Maintenance </strong> - Regular maintenance of all vehicles</p> 
 
     <h2> Sustainable Resource Use </h2>
@@ -28,7 +28,7 @@
 
     <h2> Carbon Offsetting </h2>
     <p><strong> Support Local Reforestation Projects </strong> - Engage in or fund reforestation projects within Nigeria that help absorb CO₂ from the atmosphere. This not only offsets emissions but also supports biodiversity and local communities.</p> 
-    <p><strong> Participate in Certified Carbon Offset Programs </strong> - nvest in certified carbon offset projects that are verified for their impact, ensuring your contributions are effectively helping to combat climate change.</p>
+    <p><strong> Participate in Certified Carbon Offset Programs </strong> - Invest in certified carbon offset projects that are verified for their impact, ensuring your contributions are effectively helping to combat climate change.</p>
 
     <h2> Implementation Tips </h2>
     <p><strong> Leverage Local Incentives </strong> - Take advantage of Nigerian government incentives for SMEs to adopt sustainable practices. Stay informed about new policies and programs that can support your efforts.</p> 
