--- a/flaskr/templates/result.html
+++ b/flaskr/templates/result.html
@@ -29,11 +29,12 @@
                     <p>The total carbon footprint for your business between <strong> {{ from_date }} </strong> to <strong> {{ to_date }} </strong> is <strong> {{ total_emission }} Tonnes of Co2e </strong> </p>
                 <br>
                     {% if energy_percent > transport_percent %}
-                    <p>With your Energy activity representing {{ energy_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is <strong> ₦{{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+                    <p>With your Energy activity representing <strong> {{ energy_percent }}% </strong> of the business’s carbon footprint. The total cost of the activities for your business is <strong> ₦{{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+                    <a href="{{ url_for('strategies')}}" type="button" class="btn custom-primary-btn">Strategies For Reducing Your Carbon Footprint</a>
                     {% else %}
-                    <p>With your Transport activity representing {{ transport_percent }} % of the business’s carbon footprint. The total cost of the activities for your business is ₦<strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+                    <p>With your Transport activity representing <strong> {{ transport_percent }}% </strong> of the business’s carbon footprint. The total cost of the activities for your business is ₦<strong> {{ total_price }}</strong>  Click below for strategies to reduce your carbon footprint.</p>
+                    <a href="{{ url_for('strategiess')}}" type="button" class="btn custom-primary-btn">Strategies For Reducing Your Carbon Footprint</a>
                     {% endif %}
-                <a href="{{ url_for('strategies')}}" type="button" class="btn custom-primary-btn">Strategies For Reducing Your Carbon Footprint</a>
             </div>
 
         </div>
