--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -42,8 +42,9 @@
               {{ form.submit(class="btn btn-outline-primary custom-primary-btn") }}
             </div>
           </form>
-
-          <h1>User Reports</h1>
+          <br>
+          
+          <h2>Reports</h2>
           <ul>
               {% for report in user_reports %}
                   <li>
